fix navbar z-index

--- a/src/Components/Navbar/style.css
+++ b/src/Components/Navbar/style.css
@@ -5,6 +5,7 @@
     position: fixed;
     top: 0;
     margin-bottom: 100px;
+    z-index: 99999;
 }
 
 .navbar-title {
